# ResQPlus--Watch

./: .gitignore  sdkconfig  sdkconfig.defaults
application side/src/background/: locationTask.js
application side/src/components/: LocationReporter.js  LocationStatusDot.js
application side/src/constants/: colors.js
application side/src/context/: AuthContext.js
application side/src/navigation/: AppNavigator.js
application side/src/screens/: AdminNoticesScreen.js  AlertDetailScreen.js  AlertsScreen.js  CreateNoticeScreen.js  CreatePostScreen.js  DeviceDashboardScreen.js  FeedScreen.js  HomeScreen.js  (+9 more)
demo_watch_project/: CMakeLists.txt  README.md  filelist.txt  platformio.ini  sketch_jan31e.ino  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_SettingsScreen.c  ui_SettingsScreen.h  ui_events.h  ui_font_FontTimeSmall.c  ui_img_200884385.c
demo_watch_project/include/: lv_conf.h  pin_config.h
demo_watch_project/main/: main.c
demo_watch_project/src/: main.cpp
main/: CMakeLists.txt  Kconfig.projbuild  battery_monitor.c  battery_monitor.h  ble_server.c  ble_server.h  main.c  wifi_manager.c  wifi_manager.h
main/watch_ui/: ui.c  ui.h  ui_AboutScreen.c  ui_AboutScreen.h  ui_AppDrawer.c  ui_AppDrawer.h  ui_Screen1.c  ui_Screen1.h  ui_SettingsScreen.c  ui_SettingsScreen.h  ui_TimeSettings.c  ui_TimeSettings.h  ui_WiFiLoginScreen.c  ui_WiFiLoginScreen.h  ui_WiFiScreen.c  ui_WiFiScreen.h  ui_events.c  ui_events.h  ui_font_FontButton.c  ui_font_FontTimeBig.c  ui_img_rsz_1running_4390015_png.c  ui_img_wifierr_png.c  ui_img_wifiok_png.c
project_info/: important_link.txt
(+5 files in other folders)
